<resources>
    <string name="app_name">Booking Super Futsal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name_of_person">Name of Person</string>
    <string name="daftar_lokasi">Daftar Lokasi</string>
    <string name="lokasi_terdekat">Lokasi Terdekat</string>
    <string name="data_reservasi">Data Reservasi</string>
    <string name="tagihan">Tagihan</string>
    <string name="bantuan">Bantuan</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="registrasi">Registrasi</string>
    <string name="punya_akun">Punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>

</resources>






















